# Aincrad

./: .gitignore  @CMakeLists.txt  @README.md  @lessons-learned.md  @memories.md  @scratchpad.md  BUILD_GUIDE.md  BuildAndDeploy.cs  BuildScript.cs  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DIAGNOSIS.md  GITHUB_DEPLOYMENT.md  LICENSE  MIGRATION_NOTES.md  PR_DESCRIPTION.md  README.md  SAO_FRAMEWORK_README.md  SAO_FRAMEWORK_ROADMAP.md  THE_LAST_WHISPER.md  divina.config.yml  mkdocs.yml
"b/: LICENSE.v\342\210\236"
.github/: CODEOWNERS  COMMUNITY_GUIDELINES.md  FIRST_TIME_CONTRIBUTOR.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  security-scan.yml
@docs/: README.md
@docs/Deployment/: BuildScript.ps1  Steam_Deployment.md  VR_Config.md  VR_Deployment.md  VR_Test.ps1  steam_app_build.vdf
@docs/Tools/: Asset_CLI.md
@docs/World/: Hub_System.md  Maps.md  Physics.md  Shared_Assets.md
@src/World/SharedAssets/: Asset.cpp  Asset.h  AssetDatabase.cpp  AssetDatabase.h  AssetManager.cpp  AssetManager.h  MemoryManager.cpp  MemoryManager.h  StreamingSystem.cpp  StreamingSystem.h
@tests/: PerformanceTests.cpp  VRTests.cpp
@tests/World/SharedAssets/: AssetManagerTest.cpp
@tools/aincrad-asset/: export_audio.cpp  export_model.cpp  export_texture.cpp  import_audio.cpp  import_model.cpp  import_texture.cpp  main.cpp
AI/: EnemyAI.cpp  EnemyAI.h
AincradTerminal/: CharacterCreationView.swift  FloorBossCountdown.swift  LoreCodexView.swift  MapPreviewView.swift  WelcomeSequence.swift
Assets/: README.md
Assets/Editor/: BuildAutomation.cs  BuildVerification.cs  MeshOptimizer.cs  PerformanceOptimizer.cs  ProjectValidator.cs  TextureDownloader.cs  TextureOptimizer.cs  VRBuildAutomation.cs  VRCSDKValidator.cs
Assets/GameDinVR/Scripts/: GuardianBase.cs  LilybearController.cs  LilybearOpsBus.cs
Assets/GameDinVR/Scripts/Guardians/: AthenaGuardian.cs  SerafinaGuardian.cs  ShadowFlowersGuardian.cs
Assets/GameDinVR/Scripts/OSC/: OSCTextBridge.cs
Assets/Materials/: Glass.mat
Assets/Modules/: README.md
Assets/Modules/Core/Prefabs/: PortalUI.prefab
Assets/Modules/Core/Scripts/: ModuleManager.cs  ModulePortal.cs
Assets/Modules/Core/Shaders/: PortalEffect.shader
Assets/Modules/Hub/Config/: Hub_Module.asset
Assets/Resources/: PortalConfig.asset  VRWorldConfig.asset
Assets/Shaders/: GlassWindow.shader
Assets/Udon/: GlassTeleport.cs  PortalSystem.cs  README_PORTAL_SYSTEM.md  SpawnPortal.cs  VRWorldManager.cs
Characters/: BP_AincradPlayer.cpp  BP_AincradPlayer.h  PlayerCharacter.cpp  PlayerCharacter.h
Combat/: WeaponComponent.cpp  WeaponComponent.h
Content/Blueprints/Characters/: BP_AincradPlayer.cpp  BP_AincradPlayer.h
Content/Blueprints/UI/: BP_WelcomeSequence.cpp  BP_WelcomeSequence.h
Content/Blueprints/World/: BP_ShrineOfAwakening.cpp  BP_ShrineOfAwakening.h
Content/VisionPro/: VisionProGestureHandler.cpp  VisionProGestureHandler.h  VisionProIntegration.cpp  VisionProIntegration.h  VisionProVoiceHandler.cpp  VisionProVoiceHandler.h
Editor/: DependencyChecker.cs  DeploymentScript.cs  SceneSetup.cs
ProjectSettings/: ProjectVersion.txt
Skills/: SkillSystemComponent.cpp  SkillSystemComponent.h
UI/: HUDSystem.cpp  HUDSystem.h
World/: BP_GateOfTruth.cpp  BP_GateOfTruth.h  BP_ShrineOfAwakening.cpp  BP_ShrineOfAwakening.h  BossGateRitual.cpp  BossGateRitual.h  CityZone.h  CityZoneRegistry.h  DungeonTriggerZone.cpp  DungeonTriggerZone.h  FloorCodexComponent.cpp  FloorCodexComponent.h  FloorOneZone.cpp  FloorOneZone.h  StarlakeZone.h  UnitySpireZone.h  ZoneSystem.cpp  ZoneSystem.h
cmake/: aincradConfig.cmake.in
docs/: COVENANT.md  index.md
docs/api/: README.md
examples/SAO_Advanced_Example/: main.cpp
examples/SAO_Basic_Example/: main.cpp
gamedin/: hub.json
scripts/: build.bat  build.sh
serafina/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
serafina/scripts/: start.js
serafina/src/: deploy-commands.ts  nightlyReport.ts  router.ts  uptime.ts
src/SAO/: SAOFramework.h  main.cpp
src/SAO/Combat/: CombatSystem.h
src/SAO/Core/: PlayerSystem.h
src/SAO/World/: WorldSystem.h
tests/: SAO_Framework_Tests.cpp
